--- a/bot-app/package.json
+++ b/bot-app/package.json
@@ -12,6 +12,7 @@
     "react-fetch": "0.0.9",
     "react-number-format": "^3.1.6",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "redux": "^3.0.0"
   },
