--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,45 @@
 .vscode
+
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
+bot-app/node_modules
+
+# testing
+bot-app/coverage
+
+# production
+bot-app/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
+bot-app/client/node_modules
+
+# testing
+bot-app/client/coverage
+
+# production
+bot-app/client/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
